<resources>
    <string name="app_name">PSE</string>
    <string name="home">Home</string>
    <string name="team">Team</string>
    <string name="plans">Plans</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_password">New Password</string>
    <string name="otp_verification">Verify OTP</string>
    <string name="hello_blank_fragment">hellow blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="let_s_sign_in">Let’s Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="ali_gmail_com">ali********@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password_2">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="forget_password">Forget Password</string>
    <string name="send_code">Send Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="_000000">000000</string>
    <string name="submit_code">Submit Code</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="update_details">Update</string>
    <string name="add_support_request">Add Support Request</string>
    <string name="stock_investment_plans"> Stock Investment Plans</string>
    <string name="serel">Serel</string>
    <string name="ezita">Ezita</string>
    <string name="medicine_investment_plans">Medicine Investment Plans</string>
    <string name="med_description">Ezita 250 mg is an antibiotic medication containing Azithromycin, which belongs to the macrolide class of antibiotics. It is commonly used to treat a variety of bacterial infections such as throat infections, respiratory tract infections, skin infections, ear infections, and some sexually transmitted diseases. Ezita works by stopping the growth of bacteria, helping the body to fight off the infection more effectively.</string>
    <string name="ezita_250_mg">Ezita 250 mg</string>
    <string name="total_amount_to_be_selled">Total Amount to be Selled :</string>
    <string name="regular">Regular</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="buy_plan_title">Buy Plan</string>
    <string name="calculating_ellipsis">Calculating…</string>
</resources>