<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">


    <fragment
        android:id="@+id/detailChatFragment"
        android:name="com.pse.pse.ui.fragments.chat.DetailChatFragment"
        android:label="Detail Chat"
        tools:layout="@layout/fragment_detail_chat" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.pse.pse.ui.fragments.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat">

        <action
            android:id="@+id/action_chatFragment_to_detailChatFragment"
            app:destination="@id/detailChatFragment" />

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.pse.pse.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_chatBox"
            app:destination="@id/chatFragment" />

        <action
            android:id="@+id/action_home_to_withdrawAmount"
            app:destination="@id/withdrawAmountFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_top" />

        <action
            android:id="@+id/action_home_to_depositAmount"
            app:destination="@id/depositAmountFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_top" />

        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_top" />
        <action
            android:id="@+id/action_home_to_transactionHistory"
            app:destination="@id/transactionHistoryFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_top" />

        <action
            android:id="@+id/action_homeFragment_to_myPlansFragment"
            app:destination="@id/myPlansFragment" />

    </fragment>

    <fragment
        android:id="@+id/withdrawAmountFragment"
        android:name="com.pse.pse.ui.fragments.WithdrawAmountFragment"
        android:label="Withdraw Amount"
        tools:layout="@layout/fragment_withdraw_amount" />

    <fragment
        android:id="@+id/depositAmountFragment"
        android:name="com.pse.pse.ui.fragments.DepositAmountFragment"
        android:label="Deposit Amount"
        tools:layout="@layout/fragment_deposit_amount" />

    <fragment
        android:id="@+id/newSupportRequestFragment"
        android:name="com.pse.pse.ui.fragments.NewSupportRequestFragment"
        android:label="New Support Request"
        tools:layout="@layout/fragment_new_support_request" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.pse.pse.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_top" />

    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.pse.pse.ui.fragments.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_top"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_top"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.pse.pse.ui.fragments.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUp_to_signIn"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.pse.pse.ui.fragments.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/supportChatFragment"
        android:name="com.pse.pse.ui.fragments.SupportChatFragment"
        android:label="Support Chat"
        tools:layout="@layout/fragment_support_chat" />

    <fragment
        android:id="@+id/supportFragment"
        android:name="com.pse.pse.ui.fragments.SupportFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_support">
        <action
            android:id="@+id/action_support_to_chat"
            app:destination="@id/supportChatFragment" />
        <action
            android:id="@+id/action_support_to_request"
            app:destination="@id/newSupportRequestFragment" />
    </fragment>

    <fragment
        android:id="@+id/teamFragment"
        android:name="com.pse.pse.ui.fragments.TeamFragment"
        android:label="@string/team"
        tools:layout="@layout/fragment_team">
        <action
            android:id="@+id/action_team_to_levels"
            app:destination="@id/teamLevelsFragment" />
        <action
            android:id="@+id/action_team_to_ranking"
            app:destination="@id/teamRankingFragment" />
    </fragment>

    <fragment
        android:id="@+id/teamLevelsFragment"
        android:name="com.pse.pse.ui.fragments.TeamLevelsFragment"
        android:label="@string/team"
        tools:layout="@layout/fragment_team_levels">
        <action
            android:id="@+id/action_teamLevelsFragment_to_levelUsersFragment"
            app:destination="@id/levelUsersFragment" />
    </fragment>

    <fragment
        android:id="@+id/teamRankingFragment"
        android:name="com.pse.pse.ui.fragments.TeamRankingFragment"
        android:label="Team Ranking"
        tools:layout="@layout/fragment_team_ranking" />


    <fragment
        android:id="@+id/transactionHistoryFragment"
        android:name="com.pse.pse.ui.fragments.TransactionHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_transaction_history" />

    <fragment
        android:id="@+id/levelUsersFragment"
        android:name="com.pse.pse.ui.fragments.LevelUsersFragment"
        android:label="fragment_level_users"
        tools:layout="@layout/fragment_level_users" />

    <fragment
        android:id="@+id/salaryIncomeFragment"
        android:name="com.pse.pse.ui.fragments.SalaryIncomeFragment"
        android:label="Salary Income"
        tools:layout="@layout/fragment_salary_income" />

    <fragment
        android:id="@+id/leadershipFragment"
        android:name="com.pse.pse.ui.fragments.LeadershipFragment"
        android:label="Leadership"
        tools:layout="@layout/fragment_leadership" />


    <fragment
        android:id="@+id/planFragment"
        android:name="com.pse.pse.ui.fragments.PlanFragment"
        android:label="@string/plans"
        tools:layout="@layout/fragment_plan">

        <action
            android:id="@+id/action_planFragment_to_myPlansFragment"
            app:destination="@id/myPlansFragment" />

        <action
            android:id="@+id/action_planFragment_to_buyPlanFragment"
            app:destination="@id/buyPlanFragment" />

    </fragment>

    <fragment
        android:id="@+id/buyPlanFragment"
        android:name="com.pse.pse.ui.fragments.BuyPlanFragment"
        android:label="BuyPlanFragment">

        <action
            android:id="@+id/action_buyPlanFragment_to_myPlansFragment"
            app:destination="@id/myPlansFragment" />

    </fragment>

    <fragment
        android:id="@+id/myPlansFragment"
        android:name="com.pse.pse.ui.fragments.MyPlansFragment"
        android:label="My Plans"
        tools:layout="@layout/fragment_my_plans" />

</navigation>
